--- a/templates/index.html
+++ b/templates/index.html
@@ -12,74 +12,84 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <!-- <link href="{{ url_for('static', filename='css/style.css') }}" type="text/css" rel="stylesheet"> -->
 
+    <style>
+      body {
+        font-size: 16px;
+      }
+      dd {
+        margin-bottom: 20px;
+      }
+    </style>
+
   </head>
   <body>
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
           
-          <h1>Avantpie</h1>
-          <br />          
+          <div class="text-center">
+            <h1>Style Thesaurus</h1>
+            <br />          
 
-          <!-- search functionality -->
-          <form class="form-inline">
-            <div class="form-group form-group-sm">
-              <label for="base"><small>Less like...</small></label><br />
-              <input type="text" class="form-control" id="base" placeholder="sweet">
+            <!-- search functionality -->
+            <div class="form-inline">
+              <div class="form-group has-success">
+                <input type="text" class="form-control" id="keyword" placeholder="tenderly">
+              </div>
+              <button class="btn btn-success get_words">Search</button>
             </div>
-            <div class="form-group form-group-sm">
-              <label for="goal"><small>More like...</small></label><br />
-              <input type="text" class="form-control" id="goal" placeholder="rough">
-            </div>
-          </form>
-          <br />
-          <br />
-          <div class="form-inline">
-            <div class="form-group has-success">
-              <input type="text" class="form-control" id="keyword" placeholder="tenderly">
-            </div>
-            <button class="btn btn-success get_words">Search</button>
           </div>
 
-          <!-- selecting different word embeddings -->
           <br />
           <br />
-          <h5>Word embedding options:</h5>
-          <div class="radio">
-            <label>
-              <input type="radio" name="embOptions" id="word2vec" value="GoogleNews-vectors-negative300">
-              word2vec: GoogleNews (300d)
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="embOptions" id="glove1" value="glove.6B.200d" checked>
-              glove: Wikipedia2014+Gigaword5 (200d)
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="embOptions" id="glove2" value="glove.twitter.27B.50d">
-              glove: Twitter (50d)
-            </label>
-          </div>
+        
 
+          <div class="main"></div>
+
+
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <p>Select styles:</p>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox2" value="norm" checked> Regular
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox2" value="glove-twitter-27B-50d" checked> Twitter
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="joyce" checked> Joyce
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="darwin" checked> Darwin
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="GoogleNews-vectors-negative300"> News
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="glove-6B-200d"> Wikipedia
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="food"> Food Reviews
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="sherlock"> Sherlock
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="poetry"> Poetry
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="dickens"> Dickens
+              </label>
+              <p>
+                <br />
+                <button class="btn btn-default update_styles">Update</button>
+              </p>
+            </div>
+          </div>
+            
         </div>
-
-        <!-- column for results to display -->
-        <div class="col-md-5">
-          <div>
-            <br />
-            <br />
-            <h4>Results:</h4>
-          </div>
-
-          <div class='results'>
-          </div>
-        </div>
-      </div>
 
     </div>
   </body>
