--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,16 @@
       dd {
         margin-bottom: 20px;
       }
+      .usage {
+        font-style: italic;
+      }
+      .spin {
+          animation: spin infinite 2s linear;
+      }
+      @keyframes spin {
+          from { transform: rotate(0deg); }
+          to { transform: rotate(360deg); }
+      }
     </style>
 
   </head>
