add law embeddings

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,9 @@
               <label class="checkbox-inline">
                 <input type="checkbox" id="inlineCheckbox3" value="dickens"> Dickens
               </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="inlineCheckbox3" value="law"> Law
+              </label>
               <p>
                 <br />
                 <button class="btn btn-default update_styles">Update</button>
