--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Slant Thesaurus</title>
+    <title>Style Thesaurus</title>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -62,39 +62,8 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <p>Select styles:</p>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox2" value="norm" checked> Regular
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox2" value="glove-twitter-27B-50d" checked> Twitter
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="joyce" checked> Joyce
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="darwin" checked> Darwin
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="GoogleNews-vectors-negative300"> News
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="glove-6B-200d"> Wikipedia
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="food"> Food Reviews
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="sherlock"> Sherlock
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="poetry"> Poetry
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="dickens"> Dickens
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="law"> Law
-              </label>
+              <div class="checkboxes">
+              </div>
               <p>
                 <br />
                 <button class="btn btn-default update_styles">Update</button>
