add support for part-of-speech and annoy lookup

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,8 @@
               </div>
               <button class="btn btn-success get_words">Search</button>
             </div>
+            <div id="pos">
+            </div>
           </div>
 
           <br />
