fixes for app-wordlevel

--- a/templates/word-level.html
+++ b/templates/word-level.html
@@ -17,6 +17,23 @@
     <script src="{{ url_for('static', filename='js/word-level.js') }}"></script>
     <!-- <link href="{{ url_for('static', filename='css/style.css') }}" type="text/css" rel="stylesheet"> -->
 
+    <style>
+      .panel-body {text-align: left;}
+      .ok-word:hover {
+        text-decoration: underline;
+      }
+      .tooltip.top{
+        padding: 0px;
+        }
+      .tooltip-inner{
+        background-color: rgba(255,255,255,.5); 
+        max-width:300px;
+        color:#000;
+        padding: 0px;}
+      .maintext {
+        font-size: 18px;
+        line-height: 2.25;}
+    </style>
 
     <meta charset='utf-8'>
   </head>
@@ -37,8 +54,24 @@
 
             <!-- search functionality -->
             <div class="panel panel-default">
-              <div class="panel-body texthere" contenteditable="true">
-                Basic panel example
+              <div class="panel-body maintext texthere" contenteditable="true">
+                <p>
+Database management systems (DBMSs) are designed with the goal set to compile SQL queries to physical plans that, when executed, provide results to the SQL queries. 
+</p><p>
+Building on this functionality, an ever-increasing number of application domains (e.g., provenance management, online query optimization, physical database design, interactive data profiling,  monitoring, and interactive data visualization) seek to operate on how queries are executed by the DBMS for a wide variety of purposes ranging from debugging and data explanation to optimization and monitoring. 
+</p><p>
+Unfortunately, DBMSs provide little, if any, support to facilitate the development of this class of important application domains.
+                </p>
+                <!-- <div>
+The breakdown of Dennard's transistor scaling has driven computing systems toward application-specific accelerators, which can provide orders-of-magnitude improvements in performance and energy efficiency over general-purpose processors.
+                </div>
+                <div>
+                  In contrast to deep learning techniques, kernel methods, which are attractive due to their powerful modeling of highly nonlinear data, as welll as for their theoretical learning guarantees and tractability, do not scale welll.
+                </div>
+                <div>
+                  Besides characterizing the means by which software can harness the exposed functionalities of hardware, these hardware-software interfaces define the degree and granularity of control and access that software possesses to the lower layers of the system stack.
+                </div> -->
+
               </div>
               <button type="button" class="btn btn-default update">update</button>
             </div>
@@ -54,13 +87,9 @@
           <br />
           <div class="panel panel-default">
             <div class="panel-body">
-              <p>Select styles:</p>
-              <div class="checkboxes">
+              <p>Selected word:</p>
+              <div class="more-response">
               </div>
-              <p>
-                <br />
-                <button class="btn btn-default update_styles">Update</button>
-              </p>
             </div>
           </div>
 
