--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:200,300,400,500,600,700,900&display=swap" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -23,6 +24,10 @@
       }
       h1 {
         font-family: 'Playfair Display', serif;
+        /*font-size: 60px;*/
+      }
+      h2 {
+        /*font-family: 'Playfair Display', serif;*/
         /*font-size: 60px;*/
       }
       p.tag {
@@ -45,6 +50,9 @@
           from { transform: rotate(0deg); }
           to { transform: rotate(360deg); }
       }
+      .cool-font {
+        font-family: 'Playfair Display', serif;
+      }
     </style>
 
     <meta charset='utf-8'>
@@ -59,7 +67,7 @@
           <div class="text-center">
             <h1>Style Thesaurus</h1>
             <p class="tag text-muted">
-              🌱 <em>find words based on different domains, authors, and styless</em> &nbsp; 🌾
+              🌱 find words based on different domains, authors, and styles &nbsp; 🌾
             </p>
             
             <br />
@@ -67,21 +75,20 @@
             <!-- search functionality -->
             <div class="form-inline">
               <div class="form-group has-success">
-                <input type="text" class="form-control" id="keyword" placeholder="tenderly">
+                <input type="text" class="form-control" id="keyword" placeholder="tender">
               </div>
               <button class="btn btn-success get_words">Search</button>
             </div>
-            <div id="pos">
+            <br />
+            <div id="search-word">
             </div>
 
 
 
           </div>
 
-          <br />
-          <br />
+          
         
-          <div class="mainerror text-center"></div>
           <div class="main"></div>
 
           
@@ -107,13 +114,15 @@
             <br />
             <p>
               <small>
-                The Style Thesaurus uses a combination of word embeddings and part-of-speech tagging. The difference between each category is the collection of text the thesaurus is trained on. 
+                The Style Thesaurus automatically creates a thesaurus from a large corpus of text, such that the thesaurus reflects the stylistic preferences of that text. 
                 <br /><br />
-                For instance, 'Science' uses 40k abstracts of science papers and 'Gandhi' uses his collected speeches and letters. 
+                (For the technically inclined, it trains a word embedding on part-of-speech tagged data, and returns the nearest neighbors filtered by part-of-speech.)
                 <br /><br />
-              Made by <a href="http://www.katygero.com/" target="_blank">Katy Ilonka Gero</a>.
-              <br />
-              I would love to know your thoughts! 
+                The exception is 'Oxford', which is a "normal" thesaurus: the Oxford American Writer's Thesaurus.
+                <br /><br />
+                Made by <a href="http://www.katygero.com/" target="_blank">Katy Ilonka Gero</a>.
+                <br />
+                I would love to know your thoughts! 
             </small>
             </p>
           </div>
