--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:200,300,400,500,600,700,900&display=swap" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <!-- <link href="{{ url_for('static', filename='css/style.css') }}" type="text/css" rel="stylesheet"> -->
