rm button for updating styles, just use checkbox listener

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,16 +105,9 @@
         
           <div class="main"></div>
 
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="m-2">
               <p class="select-styles">Select styles:</p>
-              <div class="checkboxes">
-              </div>
-              <p>
-                <br />
-                <button class="btn btn-default update_styles">Update</button>
-              </p>
-            </div>
+              <div class="checkboxes"></div>
           </div>
 
 
