add history, update more styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,21 +68,20 @@
   <body>
     <div class="container-fluid">
 
-      <div class="row">
+      <div class="row mt-4">
         <div class="col-md-1"></div>
         <div class="col-md-8">
           
           <div class="text-center">
             <h1>Style Thesaurus</h1>
-            <p class="tag text-muted">
-              🌱 find words based on different domains, authors, and styles &nbsp; 🌾
+            <p class="tag">
+              find adjacent words based on different domains, authors, and styles
             </p>
             
             <br />
 
             <!-- search functionality -->
             <div class="row">
-              <div class="col-3"></div>
               <div class="col-3">
                 <div class="form-group has-success">
                   <input type="text" class="form-control" id="keyword" placeholder="tender">
@@ -114,7 +113,7 @@
         </div>
 
         <div class="col-md-3">
-          <p> History
+          <p> <i>History</i>
           <div class="history">
           </div>
           
