--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,8 @@ body {
   font-family: "Times New Roman";
 }
 h1 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Times New Roman', serif;
+  text-align: left;
 }
 h2 {
   text-transform: lowercase;
@@ -12,8 +13,8 @@ h2 {
   font-weight: bold;
 }
 p.tag {
-  font-family: 'Playfair Display', serif;
   font-size: 18px;
+  text-align: left;
 }
 .select-styles {
   margin-bottom: 0rem;
